# rainbow-lollipop

./: .gitignore  BUILDING  CMakeLists.txt  INSTALL.md  LICENSE  Makefile  README.md  alaia.py  release.nix
__artwork/: icon.blend
alaia/: __init__.py  alaia.py
archlinux/rainbow-lollipop-git/: PKGBUILD
cfg/: config.json
cfg/colors/: monokai.json  solarized_light.json
cmake/vala/: FindVala.cmake
data/applications/: alaia.desktop  rainbow-lollipop.desktop
data/colors/: twilight.json
data/rainbow-lollipop/: default_cfg.json
data/rainbow-lollipop/colors/: may_milton.json  solarized_dark.json
debian/: changelog  control  copyright  rainbow-lollipop.1  rules
gentoo/www-client/rainbow-lollipop/: rainbow-lollipop-9999.ebuild
helpers/: register_update_alternatives.sh
po/: de.po  en.po
src/: alaia.vala  alaia_extension.vala  application_states.vala  authentication_dialog.vala  config.vala  config_dialog.vala  context_menu.vala  database.vala  download_node.vala  empty_track.vala  error_node.vala  focus.vala  history.vala  history_track.vala  input_handlers.vala  ipc.vala  ipc_protocol.vala  loading_indicator.vala  nodes.vala  search_widget.vala  searchengine.vala  session_select.vala  site_node.vala  track.vala  tracklist.vala  tracks.vala  trackwebview.vala
vapi/: webkit2gtk-web-extension-4.0.vapi
vapi_old/: httpseverywhere.deps  libzmq.vapi
